# huffman-archiver

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: benchmarks.rs
src/: bitio.rs  decoder.rs  encoder.rs  frequency.rs  lib.rs  main.rs  tree.rs
tests/: integration_test.rs  unit_bitio.rs  unit_decoder.rs  unit_encoder.rs  unit_tree.rs
