[package]
name = "huffman-archiver"
version = "0.1.0"
edition = "2024"
description = "Консольный архиватор на основе канонического алгоритма Хаффмана"
keywords = ["huffman", "compression", "archiver"]
license = "MIT"

[dependencies]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "benchmarks"
harness = false
